Changelog
=========

1.3.2 - IN DEVELOPMENT
~~~~~~~~~~~~~~~~~~~~~~

 * Removed duplicate blockquote margin bottom from core
 * Added variable $generic-margin-bottom for pre, dl, figure, table, p, ul, ol, form, blockquote
 * Added variable $header-margin-bottom for h1-h6
 
1.3.1 - 14-Jul-2017
~~~~~~~~~~~~~~~~~~~

 * Added default button examples to test.html
 * Added basic grid examples to test.html
 * Fixed 0px lint warning
 * Removed vertical align from button due to odd inline issue
 * Added variable $input-font-color to set all inputs, selects, textareas
 * Added variable $input-margin-bottom to set all  inputs, selects, textareas, fieldsets
 
1.3.0 - 05-Jul-2017
~~~~~~~~~~~~~~~~~~~

 * Added new variable `$input-background-focus` for when an input, select or textarea has focus.
 * Removed `push-*` and `pull-*` grid classes in favour of `order-*`.
 * Simplified gutter widths to single variable `$grid-gutter-width`.

1.2.3 - 02-Jul-2017
~~~~~~~~~~~~~~~~~~~

 * Added new variables that allow all form fields to be styled.
 * Reduced margins on `hr`, `ul` and `ol`.
 * Removed awkward defaults on inputs and textareas for ios.