@@ -13,7 +13,7 @@
     line-height: 1.25;
     text-decoration: none;
     white-space: nowrap;
-    background-color: color(white);
+    background-color: $button-default-bg-color;
     border-radius: $global-radius;
     border: 1px solid $border-color;
     cursor: pointer;
